# portfolio-risk-platform

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  holdings.py  portfolios.py  risk.py
backend/app/core/: security.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: risk_calculator.py
backend/portfolio_risk_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  nginx.conf
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  PortfolioDetail.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
risk-engine/: Cargo.toml  Dockerfile
risk-engine/src/: Dockerfile  main.rs
